--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-notifications-component": "^3.1.0",
     "react-scripts": "4.0.3",
     "react-toast-notifications": "^2.4.4",
     "semantic-ui-css": "^2.4.1",
